# alib-c

./: .gitignore  ARDUINO_HOW_TO_USE  Arduino_alib-c.h  CMakeLists.txt  LIBRARIES  LICENSE  Makefile  README  README.md  TODO  Version_Notes  arduino_prep_commit.sh  makefile  setup_arduino.py
examples/: app_file_dir.c  array_list.c  client_listener.c  create_directory.c  example_ArrayList.c  example_DList.c  example_DListItem.c  example_String.c  example_TcpClient.c  example_TcpServer.c  example_ThreadedTimerEvent.c  example_Timer.c  example_TimerEvent.c  example_TimerEventHandler.c  example_binary_buffer.c  example_fd_transmission.c  example_get_proc_pids.c  example_proc_waiter.c  example_strcpy.c  example_strcpy_alloc.c  example_timer.c  example_zip.c  fd_client_disconnect.c  fd_client_listen.c  fd_transmission.c  sig_handler.c  tcp_client.c
includes/: ArrayList.h  ArrayList_private.h  ArrayList_protected.h  BinaryBuffer.h  BinaryBuffer_private.h  ClientListener.h  ClientListener_private.h  ComDataCheck.h  ComDataCheck_private.h  CurlObject.h  DList.h  DListItem.h  DListItem_private.h  DList_private.h  Endianess.h  EpollPack.h  EpollPack_private.h  EpollPack_protected.h  ErrorLogger.h  ErrorLogger_private.h  ErrorLogger_protected.h  EventServer.h  EventServer_private.h  FdClient.h  FdClient_private.h  FdServer.h  FdServer_private.h  JsonArrayIterator.h  ListHistory.h  ListHistoryItem.h  ListItem.h  ListItemVal.h  ListItemVal_private.h  ListItem_private.h  MemPool.h  MemPool_private.h  MutexObject.h  RBuff.h  RBuffIt.h  RBuffIt_private.h  (+52 more)
scripts/: install_depends.sh
(+55 files in other folders)
